--- a/src/Components/Sidebar/Item/Item.css
+++ b/src/Components/Sidebar/Item/Item.css
@@ -1,22 +1,15 @@
 .Logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 19px;
-    padding: 30px 0;
-    margin: 0;
-    color: #A4A6B3;
-    font-weight: 700;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 19px;
+	padding: 30px 0;
+	margin: 0;
+	color: #a4a6b3;
+	font-weight: 700;
 }
 .Logo svg {
-    margin-right: 15px;
-}
-.sidebar__item {
-    color:  #A4A6B3;
-    font-size: 16px;
-    font-weight: 700;
-    padding: 18px 24px;
-    padding-left: 40px;
+	margin-right: 15px;
 }
 
 /* .sidebar__link {
@@ -27,15 +20,35 @@
     color: blue;
 } */
 .sidebar__link {
-    color: #DDE2FF;
+	display: block;
+	font-size: 16px;
+	font-weight: 700;
+	padding: 18px 24px;
+	padding-left: 40px;
+	color: #a4a6b3;
+}
+svg {
+	margin-right: 24px;
+	fill: #a4a6b3;
+}
+.sidebar__item:hover .sidebar__link,
+.sidebar__item:hover svg,
+.sidebar__link:hover {
+	background: #9fa2b4;
+
+	color: #dde2ff;
+	fill: #dde2ff;
+}
+.sidebar__link:hover {
+	border-left: 3px solid #fff;
 }
 
- svg {
-    margin-right: 24px;
-    fill: #DDE2FF;
+.active {
+	color: #dde2ff;
+	background: #9fa2b4;
+	border-left: 3px solid #fff;
 }
-.sidebar__item:hover,
-.sidebar__item a:hover{
-    background: #9FA2B4;
-    
+
+.active svg {
+	fill: #dde2ff;
 }
